--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,10 +21,45 @@
 <p id="notice"><%= notice %></p>
 <!-- empty div; need to have id 'paralaxSlice1' in the doc to make parallax work --> 
   <div id="paralaxSlice1" data-stellar-background-ratio="0.5"></div>
- 
 
-<h1>You said you were interested in the following projects:</h1>
-<% @recommendations.each do |rec| %>
-  <p> <%= rec.ks_project.title %><br></p>
+
+        <section class="slice" id="recommendations">
+          <div class="container clearfix">
+            <div class="row">
+              <div class="col-sm-12">
+                <h1>Your Favorites</h1>
+                <h2 class="subTitle">You were interested in these projects</h2>
+              </div>
+              <nav id="filter" class="col-md-12 text-center">
+                <ul>
+                  <li><a href="" class="current btn btn-sm" data-filter="*">All</a></li>
+                  <% @categories.each do |category| %>
+                  <li><a href=""  class="btn btn-sm" data-filter=".<%=category %>" ><%= category.capitalize %></a></li>
+                  <% end %>
+                </ul>
+              </nav>
+
+              <div class="portfolio-items isotopeWrapper clearfix imgHover">
+                <% @liked_recs.each do |rec| %>
+                <article class="col-sm-4 isotopeItem profile-recommendation <%= rec.ks_project.parent_category.downcase %>">
+                  <section class="imgWrapper">
+                    <a href="http://www.kickstarter.com<%=rec.ks_project.url %>"> <img alt="" src="<%= rec.ks_project.image_url %>" class="img-responsive">
+                  </section>
+
+                  <section class="boxContent">
+                    <h3><%= link_to rec.ks_project.title, "http://www.kickstarter.com" + rec.ks_project.url %></h3>
+                    <p>
+                      <%= rec.ks_project.description %><br>
+                    </p>
+                  </section>
+                </article>
+                <% end %>
+
+
+                </div>
+              </div>
+            </div>
+<% if @liked_recs.empty? %>
+<center><h2>Nothing yet! Get some more <%= link_to "recommendations?", recommendations_path %></h2></center>
 <% end %>
-
+          </section>
