wip, added model and a form to follow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
             <li><% if @user %><a href="/recommendations">Your Recs</a> </li>
             <li><%= link_to "Your Profile", user_path(@user) %> </li>
             <li><a id="logout" href="/sessions/logout">Logout</a> <% end %></li>
-            <li><a href="#about">How This Works</a> </li>
+            <li><a href="/about">How This Works</a> </li>
           </ul>
         </div>
 
