--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-xs-12">
           <h1>Recommendations for you</h1>
-          <h2 class="subTitle">Here's a few projects we think you might be interested in backing -- <%= @user.scores %></h2>
+          <h2 class="subTitle">Here's a few projects we think you might be interested in backing</h2>
         </div>
       </div>
       <div class="row active-recs">
@@ -107,7 +107,8 @@
             <a href="<%= @most_similar.url %>"><img src="<%= @most_similar_image_url%>" class="img-responsive similar-image"></a>
           </p>
         <h2><%= link_to @most_similar.name, "http://www.kickstarter.com" + @most_similar.url %></h2>
-                      <p><%= @most_similar.description if !@most_similar.description.empty?%> </p>
+        <p><%= @most_similar.description if !@most_similar.description.empty?%> </p>
+        <p><%= @most_similar.bio if @most_similar.bio %></p>
         <p><% if !@most_similar.location.empty? %>From <%= @most_similar.location %><% end %></p>
         <p><% if !@most_similar.date_joined.empty? %>Joined on <%= @most_similar.date_joined %><% end %></p>
         </center>
