wip on deleting saved projects

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,6 +52,7 @@
                       <%= rec.ks_project.description %><br>
                     </p>
                   </section>
+                  <%= link_to "delete", delete_save_path %>
                 </article>
                 <% end %>
 
