--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -1,31 +1,53 @@
+  <header id="displayHeader" class="navbar-fixed-top" role="banner">
+    <div class="container">
+      <nav class="navbar navbar-default scrollMenu" role="navigation">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
+          <a class="navbar-brand" href="#homeFullScreen">Kickammender.</a> 
+        </div>
+        <div class="collapse navbar-collapse navbar-ex1-collapse" id="scrollTarget">
+          <ul class="nav navbar-nav pull-right">
+            <li class="active"><a href="/">Home</a> </li>
+            <li><a href="/recommendations">Your Recs</a> </li>
+            <li><%= link_to "Your Profile", user_path(@user) %> </li>
+            <li><a id="logout" href="/sessions/logout">Logout</a> </li>
+            <li><a href="/about#about">How This Works</a> </li>
+          </ul>
+        </div>
+
+      </nav>
+    </div>
+  </header>
+<p id="notice"><%= notice %></p>
   <div id="paralaxSlice1" data-stellar-background-ratio="0.5"></div>
 <!-- about us -->
         <section class="slice" id="about">
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h1>About us</h1>
-                <h2 class="subTitle">Ashley is a versatile one page website template</h2>
+                <h1>How this works</h1>
+                <h2 class="subTitle">Kickammender uses machine learning to make intelligent recommendations</h2>
               </div>
             </div>
 
             <div class="row">
               <div class="col-sm-4"> <img src="/assets/plant_growing_from_coins.jpg" alt="services" class="img-responsive"> </div>
               <div class="col-sm-4">
-                <h2>Build your website, now!</h2>
+                <h2>The Problem</h2>
 
-                <p>This did not seem to encourage the witness at all: he kept shifting  from one foot to the other, looking uneasily at the Queen, and in  his confusion he bit a large piece out of his teacup instead of the  bread-and-butter.
+                <p>Three years after Kickstarter launched, we backed our first project: the Double Fine Adventure. At the time, this was the largest project that had ever been on the site. Since then, we've only backed a couple of other projects. Kickstarter is a concept we believe in, and we love directly supporting quality content made by independent creators. Why aren't we using it more?</p>
+
+                <p>Part of the reason is because we only hear about promising Kickstarter projects through some other source that will sometimes refer us to something on the site. We wanted a better way to find projects, so we built Kickammender.
                 </p>
 
-                <p>Just at this moment Alice felt a very curious sensation, which puzzled  her a good deal until she made out what it was: she was beginning to  grow larger again, and she thought at first she would get up and leave  the court; but on second thoughts she decided to remain where she was as  long as there was room for her.
-                </p>
               </div>
 
               <div class="col-sm-4">
-                <h2>Ashley website template</h2>
-                <p> The Hatter's remark seemed to have no sort of meaning in it, and yet it was certainly English. 'I don't quite understand you,' she said, as politely as she could. 'The Dormouse is asleep again,' said the Hatter, and he poured a little hot tea upon its nose. </p>
-                <h3>I don't quite understand you</h3>
-                <p> The Dormouse shook its head impatiently, and said, without opening its eyes, 'Of course, of course; just what I was going to remark myself.' 'Have you guessed the riddle yet?' the Hatter said, turning to Alice again. </p>
+                <h2>Our Solution</h2>
+                <p></p>
+                <p>The heart of our process is the <em>k</em>-means clustering algorithm. We've built that into a dynamic web application using Ruby on Rails. Our application delivers unique recommendations to a user based on their Facebook likes. Additionally, we've built a simple user feedback system and user profile that allows users to tailor our recommendations, save projects they're interested in, and follow Kickstarter users that they like.</p>
+
+                <p>Thanks for taking a look at Kickammender. We hope you find it useful. Read on for a detailed explanation of our methodology, or get in touch with us via Twitter: @jnoconor, @mpolycar. </p>
               </div>
             </div>
           </div>
@@ -35,8 +57,7 @@
             <div class="paralaxMask"></div>
             <div class="paralaxText">
               <i class="icon-star iconBig"></i>
-              <blockquote class="mt15">O this learning, what a thing it is! 
-                <br/><small>SHAKESPEARE</small></blockquote>
+
             </div>
           </div>
         </div>
@@ -44,33 +65,36 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h1>How this works</h1>
-                <h2 class="subTitle">An analogy to the inner workings of the Recommendation Engine</h2>
+                <h1>K Means Clustering</h1>
+                <h2 class="subTitle">The inner workings of our recommendation engine</h2>
               </div>
             </div>
 
             <div class="row">
               <div class="col-sm-4">
-                <h2>A Computerless World</h2>
+                <h2>[k means analogy - 1 column, 1 or 2 paragraphs]</h2>
                 <p>Lets forget for a moment that computers and the web exists. Say you are at a fundraising event where 50,000 projects are looking for backers and there are 200,000 people that are looking for projects to back. Currently, the situation is extremely chaotic. It is similar to being in a football stadium with 50,000 people that have projects and are looking for your funding. The editors choice panel on kickstarter is like having a few lucky people being broadcast on the jumbotron in the stadium. The new projects panel is like hanging out by the entrance and seeing the flood new projects coming in. Its a mess.</p>
                 <p>What the Kickammender recommendation engine does is transform the stadium into a skyscraper. As you enter the lobby of the building, a receptionist analyses your interests and tells you to go to room 17 on the 62nd floor.</p>
 
 
              </div>
               <div class="col-sm-4">
+                <h2>[technical details - concepts]</h2>
+                <%= image_tag "kmeans2.gif", class: "kmeans-gif", style: "width: 100%" %>
                 <p> In this room is a round table with prolific kickstarter backers. All of these people have similar interests and personalities to you. The people that love theater, find comics mildly interesting, and hate technology will probably be placed at the same table. The receptionist was very good at placing people with similar interests at the same table. Some tables might have 50 people and others might only have 10 people.</p>
                 <p>At the dining table, people talk about the projects that they have backed and the user takes note of the projects that have been mentioned often that are still looking for funding. These are true recommendations. They are based off of actual backers and not what the people proposing the project say. More importantly, the backers that we are listening to are the users that have shown to have similar interests to the us.</p>
 
               </div>
 
               <div class="col-sm-4">
+                <h2>[technical details - math]</h2>
                 <p>Now imagine we get a chance to talk to everyone at our table and we find that we have the most similar interests to a specific user. We take note of that person so that we can keep in touch in the future. When they find any new projects that they would like to back they let us know since we will probably also find that project interesting as well.</p>
                 <p>After a busy day of networking and a full stomack we take the elevator back down to the lobby, we thank the receptionist for choosing such an amazing room for you and go home.</p>
                 <p>Now imagine an engine that does all of this with a single mouse click. Welcome to the beauty of Kickammender.</p> 
  
                 <br>
                 <center>
-                <p><a class="btn" href="/auth/facebook"><i class="icon-facebook-1"></i>Get started</a></p>
+
               </center>
               </div>
             </div>
@@ -81,7 +105,7 @@
           <div class="maskParent">
             <div class="paralaxMask"></div>
             <div class="paralaxText">
-              <img class="similar-image" src="/assets/Facebook-Like-Button.jpg" alt="Facebook like button" width="10%">
+              <%= image_tag "facebook-like-click.jpg", size: "150x150", style: "border-radius: 15px" %>
             </div>
           </div>
         </div>
@@ -90,15 +114,15 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h1>Categorizing Users</h1>
-                <h2 class="subTitle">How to figure out a persons interests</h2>
+                <h1>Ruby Implementation</h1>
+                <h2 class="subTitle">[this cries out for a diagram] What we built</h2>
               </div>
             </div>
 
             <div class="row">
               <div class="col-sm-4">
                 <center>
-                  <img class="no-border-rounded-image" src="/assets/facebook-like-click.jpg" alt="clicking a facebook like" width="75%" class="img-responsive">
+
                 </center>
               </div>
 
@@ -119,8 +143,8 @@
           <div class="container">
             <div class="row">
               <div class="col-xs-12">
-                <h1>Grouping Together Like-Minded Individuals</h1>
-                <h2 class="subTitle">How the K Means Clustering Algorithm Works</h2>
+                <h1>[putting it together - recommendations for a user]</h1>
+                <h2 class="subTitle"></h2>
               </div>
             </div>
 
@@ -145,7 +169,6 @@
 
                 <br>
                 <center>
-                <p><a class="btn" href="/auth/facebook"><i class="icon-facebook-1"></i>Get started</a></p>
               </center>
               </div>
             </div>
@@ -156,7 +179,7 @@
             <div class="row">
               <div class="col-xs-12">
                 <h1>Getting Feedback from Users</h1>
-                <h2 class="subTitle">Having the user train our engine to suit their exact personality</h2>
+                <h2 class="subTitle">Having the user train our engine to suit their personality</h2>
               </div>
             </div>
 
