--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,7 +67,7 @@
             <li><% if @user %><a href="/recommendations">Your Recs</a> </li>
             <li><%= link_to "Your Profile", user_path(@user) %> </li>
             <li><a id="logout" href="/sessions/logout">Logout</a> <% end %></li>
-            <li><a href="/about">How This Works</a> </li>
+            <li><a href="/about#about">How This Works</a> </li>
           </ul>
         </div>
 
@@ -123,7 +123,7 @@
         </div>
         <div class="col-xs-4" align="center">
             <h3>Curious about how this works?</h3>
-            <a class="btn" href="/about">Find out</a>
+            <a class="btn" href="/about#about">Find out</a>
         </div>
 
         <div class="col-xs-4 pull-right">
