--- a/app/views/recommendations/index.html.erb
+++ b/app/views/recommendations/index.html.erb
@@ -91,11 +91,11 @@
       <div class="col-sm-6">
         <center>
           <p>
-            <a href="<%= @most_similar.url %>"><img src="<%= @most_similar_image_url%>" class="img-responsive similar-image"></a>
+            <a href="http://www.kickstarter.com<%= @most_similar.url %>"><img src="<%= @most_similar_image_url%>" class="img-responsive similar-image"></a>
           </p>
         <h2><%= link_to @most_similar.name, "http://www.kickstarter.com" + @most_similar.url %></h2>
         <p><%= @most_similar.description if !@most_similar.description.empty?%> </p>
-        <p><%= @most_similar.bio if @most_similar.bio %></p>
+
         <p><% if !@most_similar.location.empty? %>From <%= @most_similar.location %><% end %></p>
         <p><% if !@most_similar.date_joined.empty? %>Joined on <%= @most_similar.date_joined %><% end %></p>
         </center>
@@ -103,6 +103,10 @@
 
       <div class="row">
         <div class="col-sm-6">
+          <% if @most_similar.bio %>
+          <h2>About</h2>
+          <p><%= @most_similar.bio%></p>
+          <% end %>
           <h2>Here's some projects they've backed in the past:</h2>
           <h3></h3>
           <p></p>
@@ -112,7 +116,7 @@
             <% end %>
           </ul>
       </div>
-      <div class="col-sm-6" style="height:75px"></div>
+      <div class="col-sm-6" style="height:25px"></div>
       <div class="col-sm-6">
         <%= form_tag follow_path do %>
         <center><input type="submit" class="btn tips nav" data-original-title="save this user to stay up to date on what they've backed" value="follow?"></center>
