--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
             <li><a href="/recommendations">Your Recs</a> </li>
             <li><%= link_to "Your Profile", user_path(@user) %> </li>
             <li><a id="logout" href="/sessions/logout">Logout</a> </li>
-            <li><a href="#about">How This Works</a> </li>
+            <li><a href="/about#about">How This Works</a> </li>
           </ul>
         </div>
 
