--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
             <li><a href="/recommendations">Your Recs</a> </li>
             <li><%= link_to "Your Profile", user_path(@user) %> </li>
             <li><a id="logout" href="/sessions/logout">Logout</a> </li>
-            <li><a href="#about">How This Works</a> </li>
+            <li><a href="/about">How This Works</a> </li>
           </ul>
         </div>
 
@@ -71,7 +71,7 @@
     <div class="maskParent">
       <div class="paralaxMask"></div>
       <div class="paralaxText container">
-        <h1><i class="star"></i></h1>
+        <h1><i class="icon-star"></i></h1>
       </div>
     </div>
   </div>
