--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,8 @@
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,800" rel="stylesheet" type="text/css">
     <!-- plugin css  -->
     <%= stylesheet_link_tag "js-plugin/animation-framework/animate" %>
-    <%= stylesheet_link_tag "js-plugin/magnific-popup/magnific-popup" %>
     <%= stylesheet_link_tag "js-plugin/isotope/css/style" %>
     <%= stylesheet_link_tag "flexslider" %>
-    <%= stylesheet_link_tag "js-plugin/pageSlide/jquery.pageslide" %>
 
     <!-- icon fonts -->
     <%= stylesheet_link_tag "custom-icons" %>
@@ -168,29 +166,16 @@
     <%= javascript_include_tag "js-plugin/respond/respond.min" %>
     <%= javascript_include_tag "js-plugin/jquery/1.8.3/jquery.min" %>
     <%= javascript_include_tag "js-plugin/jquery-ui/jquery-ui-1.8.23.custom.min" %>
-    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
-    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
-    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
-    <%= javascript_include_tag "js-plugin/respond/respond.min" %>
+
     <!-- third party plugins  -->
-    <%= javascript_include_tag "bootstrap" %>
+    <%= javascript_include_tag "bootstrap.min" %>
     <%= javascript_include_tag "jquery.flexslider-min" %>
-    <%= javascript_include_tag "js-plugin/easing/jquery.easing.1.3" %>
     <%= javascript_include_tag "js-plugin/isotope/jquery.isotope.min" %>
-    <%= javascript_include_tag "js-plugin/neko-contact-ajax-plugin/js/jquery.validate.min" %>
     <%= javascript_include_tag "js-plugin/parallax/js/jquery.scrollTo-1.4.3.1-min" %>
     <%= javascript_include_tag "js-plugin/parallax/js/jquery.localscroll-1.2.7-min" %>
     <%= javascript_include_tag "js-plugin/parallax/js/jquery.stellar.min" %>
-    <%= javascript_include_tag "jquery.stellar" %>
-    <%= javascript_include_tag "jquery.stellar.min" %>
-    <%= javascript_include_tag "jquery.localscroll-1.2.7-min" %>
-    <%= javascript_include_tag "jquery.scrollTo-1.4.3.1-min" %>
-
 
     <!-- <script type="text/javascript" src="assets/js-plugin/smoothscroll/SmoothScroll.js"></script> -->
-    <%= javascript_include_tag "js-plugin/pageSlide/jquery.pageslide-custom" %>
-    <%= javascript_include_tag "js-plugin/jquery.sharrre-1.3.4/jquery.sharrre-1.3.4.min" %>
-    <%= javascript_include_tag "js-plugin/owl.carousel/owl-carousel/owl.carousel.min" %>
 
     <!-- Custom  -->
     <%= javascript_include_tag "custom" %>
