--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
           <ul class="nav navbar-nav pull-right">
             <li class="active"><a href="/">Home</a> </li>
             <li><% if @user %><a href="/recommendations">Your Recs</a> </li>
-            <li><%= link_to "Your Profile", user_path(@user) %> </li>
+            <li><a href="/users/<%= @user.id %>#favorites">Your Profile</a> </li>
             <li><a id="logout" href="/sessions/logout">Logout</a> <% end %></li>
             <li><a href="/about">How This Works</a> </li>
           </ul>
