--- a/app/views/admin/about.html.erb
+++ b/app/views/admin/about.html.erb
@@ -45,7 +45,7 @@
               <div class="col-sm-4">
                 <h2>Our Solution</h2>
                 <p></p>
-                <p>The heart of our process is the <em>k</em>-means clustering algorithm. We've built that into a dynamic web application using Ruby on Rails. Our application delivers unique recommendations to a user based on their Facebook likes. Additionally, we've built a simple user feedback system and user profile that allows users to tailor our recommendations, save projects they're interested in, and follow Kickstarter users that they like.</p>
+                <p>Kickammender is a demonstration of a better way to find projects on Kickstarter. The heart of our process is the <em>k</em>-means clustering algorithm. We've built that into a dynamic web application using Ruby on Rails. Our application delivers unique recommendations to a user based on their Facebook likes. Additionally, we've built a simple user feedback system and user profile that allows users to tailor our recommendations, save projects they're interested in, and follow Kickstarter users that they like.</p>
 
                 <p>Thanks for taking a look at Kickammender. We hope you find it useful. Read on for a detailed explanation of our methodology, or get in touch with us via Twitter: @jnoconor, @mpolycar. </p>
               </div>
